# os-from-scratch

./: .gdbinit  .gitignore  .lldbinit  CMakeLists.txt  README.md  bootloader.asm  io.asm
boot/: CMakeLists.txt  bootloader.asm  disk_load.asm
bootloader/: CMakeLists.txt  bootloader.asm  bootloader.lds  disk_load.asm  gdt.asm  io.asm  switch_into_pm.asm
include/kernel/: screen.h  util.h
kernel/: CMakeLists.txt  kernel.c  low_level.c
lib/: CMakeLists.txt
lib/boot/: CMakeLists.txt
lib/kernel/: CMakeLists.txt  kernel.c  kernel.lds  low_level.c  screen.c  util.c
os/: CMakeLists.txt  kernel.c  sample.asm
